🦓👔 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ Select ONE Additional
         </h2>
         <ol>
           <li>Spend More Time Coding </li>
+          <li>Create more paintings</li>
+          <li>Get into my top college</li>
         </ol>
       </div>
     </div>
